@@ -1,6 +1,11 @@
 2008-12-01  Mikael Morin  <mikael.morin@tele2.fr>
 
 	PR fortran/38252
+	* gfortran.dg/empty_function_1.f90: Fix latest commit.
+
+2008-12-01  Mikael Morin  <mikael.morin@tele2.fr>
+
+	PR fortran/38252
 	* gfortran.dg/empty_function_1.f90: New test.
 
 2008-12-01  Uros Bizjak  <ubizjak@gmail.com>
